# sec-xbrl-finwarehouse

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
db/: schema.sql
scripts/: build_statements_annual.py  build_statements_annual_v2.py  build_statements_annual_v3.py  compute_ratios.py  ingest_facts.py  seed_companies.py  test_sec.py
src/sec_xbrl_finwarehouse/: api.py  db.py  sec_client.py
